# Agentro

./: .gitignore  README.md  render.yaml
.github/workflows/: cd.yml  ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  body.json  package-lock.json  package.json  requirements.txt  server.js
backend/agents/: hookAgent.js  ideaAgent.js  trendAgent.js  viralityAgent.js
backend/config/: env.js
backend/python/: googleTrends.py
backend/routes/: strategy.js  trends.js
backend/services/: newsService.js  (+2 more)
contracts/: Cargo.toml  README.md
contracts/agent-manager/: Cargo.toml
contracts/agent-manager/src/: lib.rs
contracts/agent-manager/test_snapshots/test/: agent_creation_and_usage_payment_flow.1.json
contracts/agent-token/: Cargo.toml
contracts/agent-token/src/: lib.rs
contracts/agent-token/test_snapshots/test/: mint_transfer_and_allowance_flow.1.json
contracts/bounty/: Cargo.toml
contracts/bounty/src/: lib.rs
contracts/bounty/test_snapshots/test/: full_bounty_lifecycle_releases_reward_and_updates_leaderboard.1.json
contracts/docs/: ARCHITECTURE.md  DEPLOYMENT_TESTNET.md
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/leaderboard/: Cargo.toml
contracts/leaderboard/src/: lib.rs
contracts/leaderboard/test_snapshots/test/: records_and_ranks_users.1.json
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs
contracts/payment/test_snapshots/test/: payment_flow_locks_user_allowance_and_updates_subscription.1.json
contracts/scripts/: deploy-testnet.ps1
frontend/: package-lock.json  package.json
(+25 files in other folders)
