[package]
name = "agentro-payment"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
agentro-interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
agentro-agent-token = { path = "../agent-token" }
